--- a/src/app/bookmark/pages/landing-page/landing-page.component.html
+++ b/src/app/bookmark/pages/landing-page/landing-page.component.html
@@ -11,6 +11,8 @@
     <section class="section">
         <h2 class="section__subTitle">Download the extension</h2>
         <p class="section__paragraph">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+
+        <bookmark-browsers></bookmark-browsers>
     </section>
 
     <section class="section">
