desarrolle la seccion de preguntas frecuentes

--- a/src/app/bookmark/pages/landing-page/landing-page.component.html
+++ b/src/app/bookmark/pages/landing-page/landing-page.component.html
@@ -18,5 +18,7 @@
     <section class="section">
         <h2 class="section__subTitle">Frequently Asked Questions</h2>
         <p class="section__paragraph">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+
+        <bookmark-questions></bookmark-questions>
     </section>
 </main>
