desarolle las animaciones cuando el mouse pasa por los elementos

--- a/src/app/bookmark/components/features/features.component.css
+++ b/src/app/bookmark/components/features/features.component.css
@@ -24,6 +24,12 @@
     cursor: pointer;
 
     border-bottom: 1px solid var(--grayish-blue);
+    
+    transition: color .5s;
+}
+
+.btn_feature:hover{
+    color: var(--soft-red);
 }
 
 .btn_feature.selected{
