--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,10 +5,10 @@
         </div>
 
         <ul class="links">
-            <li class="links__item"><a href="#" class="link">Features</a></li>
-            <li class="links__item"><a href="#" class="link">Pricing</a></li>
-            <li class="links__item"><a href="#" class="link">Contact</a></li>
-            <li class="links__item"><a href="#" class="link link--login">Login</a></li>
+            <li class="links__item"><a href="#" class="link">FEATURES</a></li>
+            <li class="links__item"><a href="#" class="link">PRICING</a></li>
+            <li class="links__item"><a href="#" class="link">CONTACT</a></li>
+            <li class="links__item"><a href="#" class="link link--login">LOGIN</a></li>
         </ul>
     </nav>
 </header>
