--- a/src/app/bookmark/components/browsers/browsers.component.css
+++ b/src/app/bookmark/components/browsers/browsers.component.css
@@ -41,12 +41,22 @@
     border: none;
     outline: none;
     background-color: var(--soft-blue);
-    padding: 15px 30px;
+    padding: 11px 26px;
     font-size: 1rem;
     font-weight: 500;
     border-radius: 5px;
     color: white;
     cursor: pointer;
+
+    border: 2px solid transparent;
+
+    transition: border .5s, background-color .5s, color .5s ;
+}
+
+.browser .browser__download .btn:hover{
+    background-color: transparent;
+    border: 2px solid var(--soft-blue);
+    color: var(--soft-blue);
 }
 
 .browser--firefox{
