--- a/src/app/bookmark/components/browsers/browsers.component.html
+++ b/src/app/bookmark/components/browsers/browsers.component.html
@@ -2,7 +2,7 @@
     <div class="browsers__item">
         <div class="browser browser--chrome">
             <div class="browser__details">
-                <img src="./assets/images/logo-chrome.svg" alt="" class="img" width="100">
+                <img src="./assets/images/logo-chrome.svg" alt="" class="img" height="98">
                 <h3 class="name">Add to Chrome</h3>
                 <p class="version">Minimum version 62</p>
             </div>
@@ -16,7 +16,7 @@
     <div class="browsers__item">
         <div class="browser browser--firefox">
             <div class="browser__details">
-                <img src="./assets/images/logo-firefox.svg" alt="" class="img" width="100">
+                <img src="./assets/images/logo-firefox.svg" alt="" class="img" height="98">
                 <h3 class="name">Add to Firefox</h3>
                 <p class="version">Minimum version 55</p>
             </div>
@@ -30,7 +30,7 @@
     <div class="browsers__item">
         <div class="browser browser--opera">
             <div class="browser__details">
-                <img src="./assets/images/logo-opera.svg" alt="" class="img" width="100">
+                <img src="./assets/images/logo-opera.svg" alt="" class="img" height="98">
                 <h3 class="name">Add to Opera</h3>
                 <p class="version">Minimum version 46</p>
             </div>
