--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -10,5 +10,8 @@
             <li class="links__item"><a href="#" class="link">CONTACT</a></li>
             <li class="links__item"><a href="#" class="link link--login">LOGIN</a></li>
         </ul>
+        <button class="btn-navbar">
+            <img src="./assets/images/icon-hamburger.svg" alt="" width="20">
+        </button>
     </nav>
 </header>
