--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -51,3 +51,20 @@
     background-color: white;
     border: 2px solid var(--soft-red);
 }
+
+.navbar__content .btn-navbar{
+    display: none;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    line-height: 0px;
+}
+
+@media only screen and (max-width:830px) {
+    .navbar__content .links{
+        display: none;
+    }
+    .navbar__content .btn-navbar{
+        display: block;
+    }
+}
