desarrolle el navbar responsivo funcional

--- a/src/app/bookmark/pages/landing-page/landing-page.component.html
+++ b/src/app/bookmark/pages/landing-page/landing-page.component.html
@@ -1,4 +1,5 @@
-<shared-navbar></shared-navbar>
+<shared-navbar [navbarState]="navbarOpen" (changeState)="changeState()"></shared-navbar>
+<shared-navbar-responsive [navbarState]="navbarOpen" (changeState)="changeState()"></shared-navbar-responsive>
 <main class="main">
     <bookmark-hero></bookmark-hero>
     <section class="section">
