--- a/src/app/products/cart/cart.component.html
+++ b/src/app/products/cart/cart.component.html
@@ -1,11 +1,29 @@
 <div class="cart">
-    <h2 class="cart__title">Your Cart (0)</h2>
-    <div class="no-products">
-
-        <img src="./assets/images/illustration-empty-cart.svg" alt="" class="no-products__image">
-        <div class="no-products__text">
-            Your added items will appear here
+    <h2 class="cart__title">Your Cart ({{getCart().length}})</h2>
+    @for( product of getCart() ; let idx = $index ; track product){
+        <div class="cartProduct">
+            <div class="cartProduct__details">
+                <div class="name">{{ product.name }}</div>
+                <div class="cost">
+                    <div class="quantity">{{ product.quantity }}x</div>
+                    <div class="price"> {{'@ ' + (product.price | price) }}</div>
+                    <div class="total-price">{{ (product.price * product.quantity) | price }}</div>
+                </div>
+            </div>
+            <button class="remove" (click)="remove(idx, product)">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="#CAAFA7" viewBox="0 0 10 10"><path fill="" d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z"/></svg>
+            </button>
         </div>
+    }@empty{
+        <div class="no-products">
 
-    </div>
+            <img src="./assets/images/illustration-empty-cart.svg" alt="" class="no-products__image">
+            <div class="no-products__text">
+                Your added items will appear here
+            </div>
+
+        </div>
+    }
+
+    
 </div>
