--- a/src/app/products/list/list.component.html
+++ b/src/app/products/list/list.component.html
@@ -2,25 +2,45 @@
     <h2 class="title">Desserts</h2>
     <div class="list__conteiner">
 
-        @for( product of productsService.listProducts ; track product.name){
-            <div class="product">
-                <div class="product__image">
-                    <img [src]="product.image.desktop" alt="" width="100" class="image">
-                    <div class="add_cart">
-                        <button class="btn">
+        @for( product of getProducts() ; track product.name){
+            @if(product.quantity > 0){
+                <div class="product">
+                    <div class="product__image">
+                        <div class="image" [class.select]="inTheCart(product.id)">
+                            <img [src]="product.image.desktop" alt="" width="100" class="img">    
+                        </div>
+                        
+                        <div class="add_cart">
+                            @if (!inTheCart(product.id)) {
+                                <button class="btn" (click)="addToCart(product.id)">
+    
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" fill="none" viewBox="0 0 21 20"><g fill="#C73B0F" clip-path="url(#a)"><path d="M6.583 18.75a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM15.334 18.75a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM3.446 1.752a.625.625 0 0 0-.613-.502h-2.5V2.5h1.988l2.4 11.998a.625.625 0 0 0 .612.502h11.25v-1.25H5.847l-.5-2.5h11.238a.625.625 0 0 0 .61-.49l1.417-6.385h-1.28L16.083 10H5.096l-1.65-8.248Z"/><path d="M11.584 3.75v-2.5h-1.25v2.5h-2.5V5h2.5v2.5h1.25V5h2.5V3.75h-2.5Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M.333 0h20v20h-20z"/></clipPath></defs></svg>
+                                    
+                                    <span>Add to Cart</span>
+                                </button>
+                            }@else {
+                                <div class="btns-quantity">
+                                    <button class="btn-q" (click)="subtractToCart(product.id)">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="#fff" viewBox="0 0 10 2"><path fill="" d="M0 .375h10v1.25H0V.375Z"/></svg>
+                                    </button>
 
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" fill="none" viewBox="0 0 21 20"><g fill="#C73B0F" clip-path="url(#a)"><path d="M6.583 18.75a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM15.334 18.75a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM3.446 1.752a.625.625 0 0 0-.613-.502h-2.5V2.5h1.988l2.4 11.998a.625.625 0 0 0 .612.502h11.25v-1.25H5.847l-.5-2.5h11.238a.625.625 0 0 0 .61-.49l1.417-6.385h-1.28L16.083 10H5.096l-1.65-8.248Z"/><path d="M11.584 3.75v-2.5h-1.25v2.5h-2.5V5h2.5v2.5h1.25V5h2.5V3.75h-2.5Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M.333 0h20v20h-20z"/></clipPath></defs></svg>
-                            
-                            <span>Add to Cart</span>
-                        </button>
+                                    <div class="quantity">{{ quantityInTheCart(product.id) }}</div>
+
+                                    <button class="btn-q" (click)="addToCart(product.id)">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="#fff" viewBox="0 0 10 10"><path fill="" d="M10 4.375H5.625V0h-1.25v4.375H0v1.25h4.375V10h1.25V5.625H10v-1.25Z"/></svg>
+                                    </button>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                    <div class="product__texts">
+                        <div class="category">{{ product.category }}</div>
+                        <div class="name">{{ product.name }}</div>
+                        <div class="price">${{ product.price }}</div>
+                        <div class="quantity">{{ product.quantity }}</div>
                     </div>
                 </div>
-                <div class="product__texts">
-                    <div class="category">{{ product.category }}</div>
-                    <div class="name">{{ product.name }}</div>
-                    <div class="price">${{ product.price }}</div>
-                </div>
-            </div>    
+            }
         }@empty {
             <span>"No hay productos..."</span>
         }
