--- a/src/app/products/main/main.component.css
+++ b/src/app/products/main/main.component.css
@@ -14,3 +14,9 @@
     grid-template-columns: 2fr 1fr;
     gap: 30px;
 }
+
+@media only screen and (max-width:880px) {
+    .products{
+        grid-template-columns: 1fr;
+    }
+}
