--- a/src/app/products/cart/cart.component.css
+++ b/src/app/products/cart/cart.component.css
@@ -28,64 +28,54 @@
     font-weight: var(--font-weight-semibold);
 }
 
-.cartProduct{
+.total{
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    padding: 20px 0px;
-
-    border-bottom: 1px solid var(--rose-100);
+    padding: 25px 0px;
 }
 
-.cartProduct .cartProduct__details .name{
-    margin-bottom: 6px;
-    font-size: .9rem;
-    font-weight: var(--font-weight-semibold);
-}
-.cartProduct .cartProduct__details .cost{
-    display: flex;
-    gap: 20px;
-
-    font-size: .9rem;
+.total__price{
+    font-size: 1.8rem;
+    font-weight: var(--font-weight-bold);
 }
 
-.cartProduct .cartProduct__details .cost .quantity{
-    color: var(--color-red);
-    font-weight: var(--font-weight-semibold);
-}
+.verification{
+    padding: 20px;
 
-.cartProduct .cartProduct__details .cost .price{
-    color: var(--rose-500);
-}
-
-.cartProduct .cartProduct__details .cost .total-price{
-    color: var(--rose-500);
-    font-weight: var(--font-weight-semibold);
-}
-
-.cartProduct .remove{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 3px;
-    border-radius: 50%;
-    background-color: transparent;
-    outline: none;
-    border: 1px solid var(--rose-300);
+    gap: 8px;
+
+    background-color: var(--rose-100);
+
+    border-radius: 5px;
+
+    margin-bottom: 25px;
+}
+
+.verification .verification__texts{
+    color: var(--rose-500);
+}
+
+.confirm-order{
+    width: 100%;
+    padding: 18px;
+    border-radius: 50px;
+    background-color: var(--color-red);
     cursor: pointer;
 
-    transition: border .7s;
+    font-size: 1rem;
+    color: white;
+
+    border: none;
+    outline: none;
+
+    transition: background-color .5s;
 }
 
-.cartProduct .remove svg{
-    transition: fill .7s;
-}
-
-.cartProduct .remove:hover{
-    border: 1px solid black;
-}
-
-.cartProduct .remove:hover svg{
-    fill: black;
+.confirm-order:hover{
+    background-color: var(--rose-500);
 }
