--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@
     --rose-100: hsl(13, 31%, 94%);
     --rose-300: hsl(14, 25%, 72%);
     --rose-400: hsl(7, 20%, 60%);
-    --rose-500: hsl(12, 20%, 44%);
+    --rose-500: #87635a;
     --rose-900: hsl(14, 65%, 9%);
 
     --font-weight-regular: 400;
